# codex-memory-sync

./: .gitignore  CHANGELOG.md  README.md  README_EN.md  build_exe.py  cli.py  gui_app.py  pyproject.toml  requirements.txt  setup.py  start_gui.bat  start_gui.sh  start_web.bat  start_web.sh  web_server.py
.github/workflows/: ci.yml
gui/: app.py  app_modern.py  chat_bubble.py  dialogs.py  preview.py  tab_cloud.py  tab_local.py  tab_settings.py  tab_sync.py  tray.py  widgets.py  wizard.py
src/: bridge.py  chat_parser.py  cloud.py  cloud_base.py  cloud_github.py  cloud_manbaout.py  config.py  daemon.py  export_local.py  exporter.py  importer.py  metadata.py  path_detector.py  state.py  utils.py  watcher.py
static/: index.html
