[project]
name = "codex-memory-sync"
version = "1.0.0"
description = "Cross-device Codex memory sync with encryption and cloud backends"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "cryptography>=41.0.0",
    "watchdog>=3.0.0",
    "Pillow>=9.0.0",
    "pystray>=0.19.0",
]

[project.scripts]
codex-memory = "cli:cli"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "gui", "cli.py", "gui_app.py", "build_exe.py"]
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportMissingImports = false
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false
